[tool.poetry]
name = "nssurge-cli"
version = "0.2.0"
description = ""
authors = ["Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tddschn/nssurge-cli"
repository = "https://github.com/tddschn/nssurge-cli"
classifiers = [
	"Topic :: Utilities"
]
keywords = ["nssurge", "cli", "surge"]

[tool.poetry.scripts]
nsg = "nssurge_cli:cli.app"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tddschn/nssurge-cli/issues"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.1"
nssurge-api = "0.2.7"
utils-tddschn = "^0.1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
toml = "^0.10.2"
yapf = "^0.32.0"
better-exceptions = "^0.3.3"
bump2version = "^1.0.1"
logging-utils-tddschn = "^0.1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
